kustomize/overlay/Development/helm-chart-testing/deployment-v1-0-0-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-chart-testing-v1-0-0
  labels:
    app: helm-chart-testing-v1-0-0
    applicationId: app_0546a175-bf96-4a0d-a08b-d1762565b4e9
    version: v1.0.0
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_6665615c-77bd-4dc5-9bb1-37ca0b0f19e6
    environmentId: env_e5d8feaf-553c-4cd5-8f37-09e5b58df4be
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  selector:
    matchLabels:
      app: helm-chart-testing-v1-0-0
  template:
    metadata:
      labels:
        app: helm-chart-testing-v1-0-0
        applicationId: app_0546a175-bf96-4a0d-a08b-d1762565b4e9
        version: v1.0.0
        organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
        projectId: project_6665615c-77bd-4dc5-9bb1-37ca0b0f19e6
        environmentId: env_e5d8feaf-553c-4cd5-8f37-09e5b58df4be
