kustomize/overlay/Development/helm-chart-testing/service-v1-0-0-patch.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: helm-chart-testing-v1-0-0
    applicationId: app_0546a175-bf96-4a0d-a08b-d1762565b4e9
    version: v1.0.0
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_6665615c-77bd-4dc5-9bb1-37ca0b0f19e6
    environmentId: env_e5d8feaf-553c-4cd5-8f37-09e5b58df4be
  name: helm-chart-testing-v1-0-0
spec:
  selector:
    app: helm-chart-testing-v1-0-0
