kustomize/overlay/Development/helm-chart-testing/helm-chart-testing-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-chart-testing-dev-ingress
  namespace: env-testing-dev
  annotations:
    skyu.io/ingress.cert: private
    skyu.io/ingress.provider: nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_6665615c-77bd-4dc5-9bb1-37ca0b0f19e6
    applicationId: app_0546a175-bf96-4a0d-a08b-d1762565b4e9
    environmentId: env_e5d8feaf-553c-4cd5-8f37-09e5b58df4be
spec:
  tls: []
  rules:
    - host: '8080'
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: helm-chart-testing-v1-0-0
                port:
                  number: 80
